--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
+  margin-top: 50px;
 }
 
 .container {
@@ -36,16 +37,32 @@ h1 {
 }
 
 .button-container {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
 
 button {
-    width: 100px;
-    padding: 4px 0;
-    background-color: rgb(122, 184, 205);
-    border: none;
-    border-radius: 5px;
-    font-size: 15px;
+  width: 100px;
+  padding: 4px 0;
+  background-color: rgb(122, 184, 205);
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+}
+
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: gray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-family: cursive, sans-serif;
+}
+
+a {
+  text-decoration: underline;
+  color: black;
 }
